Fix up prompt so it sticks around longer and doesn't overflow

--- a/public/stylesheets/homepage.css
+++ b/public/stylesheets/homepage.css
@@ -364,7 +364,7 @@ p.clearfix {
 	padding-left:20px;
 	-moz-border-radius:8px; 
 	-webkit-border-radius:8px;
-	width: 600px;
+	width: 700px;
 }
 
 #prompt #byline {
